--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
     <div class="container">
         <h1>Energy Power Station Proposal Questionnaire</h1>
 
-        <!-- Section 1: Circular Layout for the First Question -->
+        <!-- Section 1: Circular Layout for the First Question with provided images -->
         <div class="section active" id="section1">
             <h2>איזה סוג תחנת כוח אתם מציעים לבנות בישראל?</h2>
             <div class="circle-container">
                 <div class="circle" onclick="goToSection(2)">
-                    <img src="icons/gas.png" alt="Natural Gas">
+                    <img src="גז.png" alt="Natural Gas">
                     <p>גז טבעי</p>
                 </div>
                 <div class="circle" onclick="goToSection(3)">
-                    <img src="icons/wind.png" alt="Wind Turbine">
+                    <img src="רוח.png" alt="Wind Turbine">
                     <p>טורבינת רוח</p>
                 </div>
                 <div class="circle" onclick="goToSection(4)">
-                    <img src="icons/hydro.png" alt="Hydroelectric">
+                    <img src="הידרו.png" alt="Hydroelectric">
                     <p>הידרו-אלקטרי</p>
                 </div>
                 <div class="circle" onclick="goToSection(5)">
-                    <img src="icons/solar.png" alt="Photovoltaic">
+                    <img src="פוטו-וולטאית.png" alt="Photovoltaic">
                     <p>פוטו-וולטאי</p>
                 </div>
                 <div class="circle" onclick="goToSection(6)">
-                    <img src="icons/thermo-solar.png" alt="Thermo-Solar">
+                    <img src="תרמו-סולארי.png" alt="Thermo-Solar">
                     <p>תרמו-סולארי</p>
                 </div>
                 <div class="circle" onclick="goToSection(7)">
-                    <img src="icons/nuclear.png" alt="Nuclear">
+                    <img src="גרעיני.png" alt="Nuclear">
                     <p>גרעיני</p>
                 </div>
             </div>
