--- a/index.html
+++ b/index.html
@@ -41,8 +41,43 @@
             </div>
         </div>
 
-        <!-- Add sections 2 to 15 here -->
-        
+        <!-- Section 2 -->
+        <div class="section" id="section2">
+            <h2>גז טבעי</h2>
+            <p>Description and content for Natural Gas...</p>
+        </div>
+
+        <!-- Section 3 -->
+        <div class="section" id="section3">
+            <h2>טורבינת רוח</h2>
+            <p>Description and content for Wind Turbine...</p>
+        </div>
+
+        <!-- Section 4 -->
+        <div class="section" id="section4">
+            <h2>הידרו-אלקטרי</h2>
+            <p>Description and content for Hydroelectric...</p>
+        </div>
+
+        <!-- Section 5 -->
+        <div class="section" id="section5">
+            <h2>פוטו-וולטאי</h2>
+            <p>Description and content for Photovoltaic...</p>
+        </div>
+
+        <!-- Section 6 -->
+        <div class="section" id="section6">
+            <h2>תרמו-סולארי</h2>
+            <p>Description and content for Thermo-Solar...</p>
+        </div>
+
+        <!-- Section 7 -->
+        <div class="section" id="section7">
+            <h2>גרעיני</h2>
+            <p>Description and content for Nuclear...</p>
+        </div>
+
+        <!-- Section 15: Final Section -->
         <div id="section15" class="section">
             <h2>החלטה סופית</h2>
             <p>Thank you for your responses! You've selected a type of power station. Please bring your decision to the "Paths of Energy" program for further exploration!</p>
