--- a/index.html
+++ b/index.html
@@ -41,40 +41,41 @@
             </div>
         </div>
 
-        <!-- Section 2 -->
+        <!-- Section 2 to Section 7 -->
         <div class="section" id="section2">
             <h2>גז טבעי</h2>
             <p>Description and content for Natural Gas...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
-        <!-- Section 3 -->
         <div class="section" id="section3">
             <h2>טורבינת רוח</h2>
             <p>Description and content for Wind Turbine...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
-        <!-- Section 4 -->
         <div class="section" id="section4">
             <h2>הידרו-אלקטרי</h2>
             <p>Description and content for Hydroelectric...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
-        <!-- Section 5 -->
         <div class="section" id="section5">
             <h2>פוטו-וולטאי</h2>
             <p>Description and content for Photovoltaic...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
-        <!-- Section 6 -->
         <div class="section" id="section6">
             <h2>תרמו-סולארי</h2>
             <p>Description and content for Thermo-Solar...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
-        <!-- Section 7 -->
         <div class="section" id="section7">
             <h2>גרעיני</h2>
             <p>Description and content for Nuclear...</p>
+            <button onclick="goToSection(1)">Go Back</button>
         </div>
 
         <!-- Section 15: Final Section -->
