--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         }
 
         .circle {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             background-color: #eef4f9;
             display: flex;
@@ -59,13 +59,13 @@
         }
 
         .circle img {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
         }
 
         .circle p {
-            margin-top: 10px;
-            font-size: 16px;
+            margin-top: 5px;
+            font-size: 14px;
         }
 
         .circle:hover {
@@ -82,28 +82,46 @@
 
         .circle:nth-child(2) {
             top: 15%;
-            left: 30%;
+            left: 50%;
+            transform: translateX(-50%);
         }
 
         .circle:nth-child(3) {
-            top: 15%;
-            left: 70%;
-        }
-
-        .circle:nth-child(4) {
             top: 50%;
             right: 0;
             transform: translateY(-50%);
         }
 
-        .circle:nth-child(5) {
+        .circle:nth-child(4) {
             bottom: 15%;
-            left: 70%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .circle:nth-child(5) {
+            bottom: 0;
+            left: 15%;
         }
 
         .circle:nth-child(6) {
-            bottom: 15%;
-            left: 30%;
+            bottom: 0;
+            right: 15%;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            background-color: #007BFF;
+            color: #fff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
